Fix styling bug where location list was being clipped and hidden in FixedWrapper.

--- a/src/components/LocationList/LocationListItem/LocationListItem.sass
+++ b/src/components/LocationList/LocationListItem/LocationListItem.sass
@@ -4,7 +4,7 @@
   flex-flow: row nowrap
   align-items: center
   justify-content: flex-start
-  margin: 0.5em auto
+  margin: 0.75em auto
 
 .LocationListItem__filePath
   text-overflow: ellipsis
